# autobackup

./: .gitignore  CMakeLists.txt
autobackup/: CConfiguration.cpp  CConfiguration.h  CMakeLists.txt  SDatabaseConfig.h  autobackup.cpp  autobackup.h  main.cpp
autobackup/Include/: CConfiguration.h  CDateTime.h  CDirectory.h  CDumperBase.h  CFile.h  CLZMAUtil.h  CLog.h  CMySQLDumper.h  CTimeSpan.h  DumperBase.h  EDatabaseProvider.h  MyLZMA.h  MySQLDumper.h
autobackup/Source/: CConfiguration.cpp  CDateTime.cpp  CDirectory.cpp  CDumperBase.cpp  CFile.cpp  CLZMAUtil.cpp  CLog.cpp  CMySQLDumper.cpp  CTimeSpan.cpp  DumperBase.cpp  MySQLDumper.cpp
